--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -1,3 +1,11 @@
-.todoItems {
-  padding: 10px;
+
+$headerBackground: #b27cec;
+
+.header {
+  background-color: $headerBackground;
+  color: whitesmoke;
+  text-align: center;
+  padding: 15px;
+  font-size: large;
+  font-weight: bold;
 }
