--- a/frontend/src/App.module.scss
+++ b/frontend/src/App.module.scss
@@ -1,11 +1,7 @@
-
-$headerBackground: #b27cec;
-
-.header {
-  background-color: $headerBackground;
-  color: whitesmoke;
-  text-align: center;
-  padding: 15px;
-  font-size: large;
-  font-weight: bold;
+.container {
+  display: flex;
+  gap: 4px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
