Finish functionality for adding a TODO

--- a/frontend/src/components/TodoItems.module.scss
+++ b/frontend/src/components/TodoItems.module.scss
@@ -8,4 +8,9 @@ p {
   .completedItem {
     text-decoration: line-through;
   }
+
+  .checkboxColumn {
+    display: flex;
+    justify-content: end;
+  }
 }
