--- a/frontend/src/components/TodoItems.module.scss
+++ b/frontend/src/components/TodoItems.module.scss
@@ -1,7 +1,3 @@
-p {
-  margin: 0;
-}
-
 .items {
   margin-top: 16px;
 
@@ -12,5 +8,9 @@ p {
   .checkboxColumn {
     display: flex;
     justify-content: end;
+  }
+
+  .todoTitle {
+    margin: 0;
   }
 }
